<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- header -->
    <ImageView
        android:id="@+id/back"
        android:src="@drawable/ic_chevron_back"
        android:layout_width="8dp"
        android:layout_height="14dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- body -->
    <LinearLayout
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <!-- title -->
        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/main_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_title"
                android:textSize="30sp"
                android:fontFamily="@font/gangwoneduhyeonokt"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <TextView
                android:id="@+id/sub_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sub_title"
                android:textSize="22sp"
                android:fontFamily="@font/gangwoneduhyeonokt"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_text" />
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/scdream"
                android:text="@string/description"
                android:textSize="11sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sub_text" />

        </LinearLayout>

        <!-- options -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/title">

            <ImageView
                android:id="@+id/happy_img"
                android:src="@drawable/ic_emotion_happy"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginTop="25sp"
                app:layout_constraintTop_toBottomOf="@id/description" />
            <TextView
                android:id="@+id/happy_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gangwoneduhyeonokt"
                android:text="@string/happy"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/happy_img" />

            <ImageView
                android:id="@+id/excited_img"
                android:src="@drawable/ic_emotion_excited"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/happy_text" />
            <TextView
                android:id="@+id/excited_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gangwoneduhyeonokt"
                android:text="@string/excited"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/excited_img" />

            <ImageView
                android:id="@+id/normal_img"
                android:src="@drawable/ic_emotion_normal"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/excited_text" />
            <TextView
                android:id="@+id/normal_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gangwoneduhyeonokt"
                android:text="@string/normal"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/normal_img" />

            <ImageView
                android:id="@+id/anxious_img"
                android:src="@drawable/ic_emotion_anxious"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/normal_text" />
            <TextView
                android:id="@+id/anxious_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gangwoneduhyeonokt"
                android:text="@string/anxious"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/anxious_img" />

            <ImageView
                android:id="@+id/anger_img"
                android:src="@drawable/ic_emotion_anger"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@id/anxious_text" />
            <TextView
                android:id="@+id/anger_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/gangwoneduhyeonokt"
                android:text="@string/anger"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/anger_img" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>